Add chat on home page

--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -15,4 +15,11 @@ html {
 .is-grabbing {
   cursor: grabbing;
 }
-
+.is-small {
+  width: 20px;
+  height: 20px;
+  padding: 10px;
+  span .mdi:before {
+    font-size: 18px !important;
+  }
+}
